タブレット端末で圧縮率と圧縮方法を表示するようにした。

--- a/app/src/main/assets/ZipUtility3_Desc_JA_Short.htm
+++ b/app/src/main/assets/ZipUtility3_Desc_JA_Short.htm
@@ -332,24 +332,24 @@ lang=JA style='font-family:"ＭＳ 明朝","serif"'>外部アプリと連携して、他の一般的
 word-break:break-all'><span style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Desc_JA_Short.files/image001.png" alt="*"><span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span></span><span
-lang=JA style='font-family:"ＭＳ 明朝","serif"'>内部ストレージ用の簡易ファイルマネージャー</span></p>
+lang=JA style='font-family:"ＭＳ 明朝","serif"'>ローカルストレージ用の簡易ファイルマネージャー</span></p>
 
 <p class=MsoListParagraph style='margin-left:36.0pt;text-indent:-18.0pt;
 word-break:break-all'><span style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Desc_JA_Short.files/image001.png" alt="*"><span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span></span><span
-lang=JA style='font-family:"ＭＳ 明朝","serif"'>ローカルフォルダーと</span>ZIP<span lang=JA
-style='font-family:"ＭＳ 明朝","serif"'>フォルダーとの間でコピー・カットができます</span></p>
+lang=JA style='font-family:"ＭＳ 明朝","serif"'>ローカルストレージと</span>ZIP<span lang=JA
+style='font-family:"ＭＳ 明朝","serif"'>ファイルとの間でコピー・カットができます</span></p>
 
 <p class=MsoListParagraph style='margin-left:36.0pt;text-indent:-18.0pt;
 word-break:break-all'><span style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Desc_JA_Short.files/image001.png" alt="*"><span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span></span><span
-lang=JA style='font-family:"ＭＳ 明朝","serif"'>ローカルフォルダーと</span>ZIP<span lang=JA
-style='font-family:"ＭＳ 明朝","serif"'>フォルダーでファイル名の検索</span>(<span lang=JA
+lang=JA style='font-family:"ＭＳ 明朝","serif"'>ローカルストレージと</span>ZIP<span lang=JA
+style='font-family:"ＭＳ 明朝","serif"'>ファイルでファイル名の検索</span>(<span lang=JA
 style='font-family:"ＭＳ 明朝","serif"'>結果リストでファイル名をタップするとディレクトリを表示します）</span></p>
 
-<p class=MsoNormal style='margin-left:35.4pt;word-break:break-all'>&nbsp;</p>
+<p class=MsoNormal style='word-break:break-all'>&nbsp;</p>
 
 <p class=MsoNormal style='word-break:break-all'><span lang=JA style='font-family:
 "ＭＳ 明朝","serif"'>簡易ファイルマネージャーまたは、他のファイルマネージャーで</span>ZIP<span lang=JA
@@ -390,7 +390,7 @@ Commons Compress 1.20</a></p>
 page-break-after:avoid'><span style='font-family:Symbol'><img width=11
 height=11 src="ZipUtility3_Desc_JA_Short.files/image001.png" alt="*"><span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span><a href="https://tukaani.org/xz/java.html">XZ-1.5</a></p>
+</span></span><a href="https://tukaani.org/xz/java.html">XZ-1.8</a></p>
 
 <p class=MsoNormal style='page-break-after:avoid'>&nbsp;</p>
 
