--- a/app/src/main/assets/ZipUtility3_Desc_EN_Short.htm
+++ b/app/src/main/assets/ZipUtility3_Desc_EN_Short.htm
@@ -387,7 +387,7 @@ conjunction with external applications, other popular file formats also view</p>
 style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Desc_EN_Short.files/image001.png" alt="*"><span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span></span>You
-can copy, cut between the local folder and the ZIP folder</p>
+can copy, cut between the local storage and the ZIP file</p>
 
 <p class=MsoListParagraph style='margin-left:36.0pt;text-indent:-18.0pt'><span
 style='font-family:Symbol'><img width=11 height=11
@@ -432,7 +432,7 @@ Commons Compress 1.20</a></p>
 page-break-after:avoid'><span style='font-family:Symbol'><img width=11
 height=11 src="ZipUtility3_Desc_EN_Short.files/image001.png" alt="*"><span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span><a href="https://tukaani.org/xz/java.html">XZ-1.5</a></p>
+</span></span><a href="https://tukaani.org/xz/java.html">XZ-1.8</a></p>
 
 <p class=MsoNormal style='page-break-after:avoid'>&nbsp;</p>
 
