プライバシーポリシーの修正

--- a/app/src/main/assets/ZipUtility3_Privacy_EN.htm
+++ b/app/src/main/assets/ZipUtility3_Privacy_EN.htm
@@ -357,6 +357,11 @@ src="ZipUtility3_Privacy_EN.files/image001.png" alt="*"><span style='font:7.0pt 
 <p class=MsoListParagraph style='margin-left:21.0pt;text-indent:-21.0pt'><span
 style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Privacy_EN.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span>Application error information </p>
+
+<p class=MsoListParagraph style='margin-left:21.0pt;text-indent:-21.0pt'><span
+style='font-family:Symbol'><img width=11 height=11
+src="ZipUtility3_Privacy_EN.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span>System setting value</p>
 
 <p class=MsoListParagraph style='margin-left:21.0pt;text-indent:-21.0pt'><span
@@ -379,7 +384,7 @@ src="ZipUtility3_Privacy_EN.files/image001.png" alt="*"><span style='font:7.0pt 
 <p class=MsoNormal>-modify or delete the contents of your USB storage</p>
 
 <p class=MsoNormal>Used to create, rename, and delete files and directories in
-internal storage.</p>
+internal/external storage.</p>
 
 <p class=MsoNormal>&nbsp;</p>
 
@@ -389,8 +394,15 @@ internal storage.</p>
 
 <p class=MsoNormal>-modify or delete the contents of your USB storage</p>
 
-<p class=MsoNormal>Used to create, rename, and delete files and directories in USB
+<p class=MsoNormal>Used to create, rename, and delete files and directories in internal/external
 storage.</p>
+
+<p class=20mm8261 style='margin-top:18.0pt'>3.3.Others</p>
+
+<p class=MsoNormal>-prevent device from sleeping</p>
+
+<p class=MsoNormal>Used to ensure that the process is not interrupted when the
+app transitions to the background while the file is being processed.</p>
 
 <p class=MsoNormal>&nbsp;</p>
 
