--- a/app/src/main/assets/ZipUtility3_Privacy_JA.htm
+++ b/app/src/main/assets/ZipUtility3_Privacy_JA.htm
@@ -364,6 +364,11 @@ src="ZipUtility3_Privacy_JA.files/image001.png" alt="*"><span style='font:7.0pt 
 <p class=MsoListParagraph style='margin-left:21.0pt;text-indent:-21.0pt'><span
 style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Privacy_JA.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span><span lang=JA style='font-family:"ＭＳ 明朝","serif"'>アプリのエラー情報</span></p>
+
+<p class=MsoListParagraph style='margin-left:21.0pt;text-indent:-21.0pt'><span
+style='font-family:Symbol'><img width=11 height=11
+src="ZipUtility3_Privacy_JA.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span><span lang=JA style='font-family:"ＭＳ 明朝","serif"'>システム設定値</span></p>
 
 <p class=MsoListParagraph style='margin-left:21.0pt;text-indent:-21.0pt'><span
@@ -383,11 +388,13 @@ style='font-family:"ＭＳ 明朝","serif"'>必要な権限</span></h1>
 <p class=20mm8261 style='margin-top:18.0pt'><a name="_Toc33263685">3.1.</a><span
 lang=JA style='font-family:"ＭＳ ゴシック"'>写真、メディア、ファイル</span></p>
 
+<p class=MsoNormal>-access USB storage filesystem</p>
+
 <p class=MsoNormal>-read the contents of your USB storage</p>
 
 <p class=MsoNormal>-modify or delete the contents of your USB storage</p>
 
-<p class=MsoNormal><span lang=JA style='font-family:"ＭＳ 明朝","serif"'>内部ストレージのファイルとディレクトリーの作成・改名・削除で使用します。</span></p>
+<p class=MsoNormal><span lang=JA style='font-family:"ＭＳ 明朝","serif"'>内部ストレージと外部ストレージのファイルとディレクトリーの作成・改名・削除で使用します。</span></p>
 
 <p class=20mm8261 style='margin-top:18.0pt'><a name="_Toc33263686">3.2.</a><span
 lang=JA style='font-family:"ＭＳ ゴシック"'>ストレージ</span></p>
@@ -396,7 +403,14 @@ lang=JA style='font-family:"ＭＳ ゴシック"'>ストレージ</span></p>
 
 <p class=MsoNormal>-modify or delete the contents of your USB storage</p>
 
-<p class=MsoNormal>USB<span lang=JA style='font-family:"ＭＳ 明朝","serif"'>ストレージのファイルとディレクトリーの作成・改名・削除で使用します。</span></p>
+<p class=MsoNormal><span lang=JA style='font-family:"ＭＳ 明朝","serif"'>内部ストレージと外部ストレージのファイルとディレクトリーの作成・改名・削除で使用します。</span></p>
+
+<p class=20mm8261 style='margin-top:18.0pt'>3.3.<span lang=JA style='font-family:
+"ＭＳ ゴシック"'>その他</span></p>
+
+<p class=MsoNormal>-prevent device from sleeping</p>
+
+<p class=MsoNormal><span lang=JA style='font-family:"ＭＳ 明朝","serif"'>アプリがファイルの処理中にバックグラウンドに遷移した時に処理が中断されないように使用します。</span></p>
 
 <p class=MsoNormal>&nbsp;</p>
 
