--- a/app/src/main/assets/ZipUtility3_Change_JA.htm
+++ b/app/src/main/assets/ZipUtility3_Change_JA.htm
@@ -255,6 +255,19 @@ style='font-family:"ＭＳ ゴシック"'>更新履歴</span></a></h1>
 <p class=MsoListParagraph align=left style='margin-left:21.0pt;text-align:left;
 text-indent:-21.0pt'><span style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Change_JA.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span>2020/06/06 1.21</p>
+
+<p class=MsoListParagraph align=left style='margin-left:42.55pt;text-align:
+left;text-indent:-21.25pt'><span style='font-family:Symbol'><img width=11
+height=11 src="ZipUtility3_Change_JA.files/image002.png" alt="*"><span
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp; </span></span>SDCRAD<span
+lang=JA style='font-family:"ＭＳ 明朝","serif"'>への</span>ZIP<span lang=JA
+style='font-family:"ＭＳ 明朝","serif"'>ファイルから展開したときにファイルの最終更新時刻を</span>ZIP<span
+lang=JA style='font-family:"ＭＳ 明朝","serif"'>ファイルと同じになるようにした。</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </p>
+
+<p class=MsoListParagraph align=left style='margin-left:21.0pt;text-align:left;
+text-indent:-21.0pt'><span style='font-family:Symbol'><img width=11 height=11
+src="ZipUtility3_Change_JA.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span>2020/05/14 1.20</p>
 
 <p class=MsoListParagraph align=left style='margin-left:42.55pt;text-align:
